--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "recoil": "^0.5.2",
+    "swiper": "6.8.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
