--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@fluentui/react-icons": "^1.1.145",
+    "@iconify/react": "^3.1.1",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.2",
     "@mui/styles": "^5.2.3",
