--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_BACKEND_URL="https://assist.trinity-feeds.app"
 # REACT_APP_BACKEND_URL="https://assist-service.pasarprotocol.io"
+REACT_APP_PUBLIC_ENV="development"
