--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "recoil": "^0.5.2",
     "swiper": "6.8.3",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yarn": "^1.22.17"
   },
   "scripts": {
     "start": "react-scripts start",
