--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "@ethersproject/providers": "^5.5.2",
     "@fluentui/react-icons": "^1.1.145",
     "@iconify/react": "^3.1.1",
     "@mui/icons-material": "^5.2.5",
@@ -16,17 +17,27 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
+    "@types/react-blockies": "^1.4.1",
     "@types/react-dom": "^17.0.0",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/walletconnect-connector": "^6.2.8",
+    "@web3-react/walletlink-connector": "^6.2.8",
     "apexcharts": "^3.32.1",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
+    "react-blockies": "^1.4.1",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "recoil": "^0.5.2",
+    "styled-components": "^5.3.3",
     "swiper": "6.8.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
+    "web3": "^1.6.1",
     "yarn": "^1.22.17"
   },
   "scripts": {
