--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@ethersproject/providers": "^5.5.2",
     "@fluentui/react-icons": "^1.1.145",
     "@iconify/react": "^3.1.1",
+    "@material-ui/system": "^4.12.1",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.2",
     "@mui/styles": "^5.2.3",
+    "@mui/system": "^5.2.8",
     "@rehooks/local-storage": "^2.4.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -25,6 +27,7 @@
     "@web3-react/walletconnect-connector": "^6.2.8",
     "@web3-react/walletlink-connector": "^6.2.8",
     "apexcharts": "^3.32.1",
+    "ethers": "^5.5.3",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
