--- a/.env
+++ b/.env
@@ -1,3 +1,13 @@
 REACT_APP_BACKEND_URL="https://assist.trinity-feeds.app"
 # REACT_APP_BACKEND_URL="https://assist-service.pasarprotocol.io"
 REACT_APP_PUBLIC_ENV="development"
+
+
+ETHERSCAN_API_URL="https://api.etherscan.io/api";
+ETHERSACN_API_KEY_TOKEN="aaa"; # -----------
+
+METEAST_CONTRACT="0x7c0c3c566beCBB454Ce867a67C0faAfBe1D24590";
+METEAST_STICKER_CONTRACT="0x350D156C0D4b8E8437eaA81226d8c0638C5bCf94";
+ 
+PASAR_CONTRACT="0x02E8AD0687D583e2F6A7e5b82144025f30e26aA0";
+PASAR_STICKER_CONTRACT="0x020c7303664bc88ae92cE3D380BF361E03B78B81";
