--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "apexcharts": "^3.32.1",
     "ethers": "^5.5.3",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
+    "material-ui-dropzone": "^3.5.0",
+    "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-blockies": "^1.4.1",
