--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@elastosfoundation/did-js-sdk": "^2.2.3",
     "@elastosfoundation/elastos-connectivity-sdk-js": "^1.0.12",
     "@elastosfoundation/essentials-connector-client-browser": "^1.0.26",
     "@emotion/react": "^11.7.0",
@@ -10,6 +11,8 @@
     "@ethersproject/providers": "^5.5.2",
     "@fluentui/react-icons": "^1.1.145",
     "@iconify/react": "^3.1.1",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/system": "^4.12.1",
     "@mui/icons-material": "^5.2.5",
     "@mui/lab": "^5.0.0-alpha.64",
@@ -25,6 +28,7 @@
     "@types/react": "^17.0.0",
     "@types/react-blockies": "^1.4.1",
     "@types/react-dom": "^17.0.0",
+    "@walletconnect/web3-provider": "^1.7.1",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.2.8",
@@ -34,6 +38,7 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "material-ui-dropzone": "^3.5.0",
+    "moment": "^2.29.1",
     "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
