--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@elastosfoundation/did-js-sdk": "^2.2.3",
-    "@elastosfoundation/elastos-connectivity-sdk-js": "^1.0.12",
+    "@elastosfoundation/elastos-connectivity-sdk-js": "^1.0.15",
     "@elastosfoundation/essentials-connector-client-browser": "^1.0.26",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
@@ -27,6 +27,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-blockies": "^1.4.1",
+    "@types/react-copy-to-clipboard": "^5.0.2",
     "@types/react-dom": "^17.0.0",
     "@walletconnect/web3-provider": "^1.7.1",
     "@web3-react/core": "^6.1.9",
@@ -43,6 +44,7 @@
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-blockies": "^1.4.1",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
     "react-router-dom": "^6.0.2",
