--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lodash": "^4.17.21",
     "material-ui-dropzone": "^3.5.0",
     "moment": "^2.29.1",
+    "notistack": "^2.0.3",
     "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
