feat: sign in section (#14)
* feat: implement sign-in section simply

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 REACT_APP_PUBLIC_ENV="development"
 
 REACT_APP_SERVICE_URL="https://assist-test.meteast.io"
-REACT_APP_BACKEND_URL="https://backend-test.meteast.io";
+REACT_APP_BACKEND_URL="https://backend-test.meteast.io"
 REACT_APP_IPFS_NODE_URL='https://ipfs-test.meteast.io/ipfs'
 
 REACT_APP_METEAST_CONTRACT="0x7c0c3c566beCBB454Ce867a67C0faAfBe1D24590"
