--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-blockies": "^1.4.1",
+    "react-cookie": "^4.1.1",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
