--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@web3-react/walletlink-connector": "^6.2.8",
     "apexcharts": "^3.32.1",
     "ethers": "^5.5.3",
+    "ipfs-http-client": "55.0.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "material-ui-dropzone": "^3.5.0",
