--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 REACT_APP_PUBLIC_ENV="development"
 
-REACT_APP_SERVICE_URL="https://assist-test.meteast.io"
+# REACT_APP_SERVICE_URL="https://assist-test.meteast.io"
+REACT_APP_SERVICE_URL="https://ed90-80-237-47-16.ngrok.io"
 REACT_APP_BACKEND_URL="https://backend-test.meteast.io"
 # REACT_APP_BACKEND_URL="https://29e8-80-237-47-16.ngrok.io"
 REACT_APP_IPFS_NODE_URL='https://ipfs-test.meteast.io/ipfs'
