feat: implementation of put a nft on sale

--- a/.env
+++ b/.env
@@ -14,3 +14,5 @@ REACT_APP_PASAR_STICKER_CONTRACT="0x020c7303664bc88ae92cE3D380BF361E03B78B81"
 
 REACT_APP_ELASTOS_TRANSACTION_API_URL='https://esc.elastos.io/api?module=transaction&action=gettxinfo&txhash='
 REACT_APP_ELASTOS_LATEST_PRICE_API_URL='https://esc.elastos.io/api?module=stats&action=coinprice'
+REACT_APP_ELASTOS_ESC_MAIN_NET='https://esc.elastos.io'
+REACT_APP_ELASTOS_ESC_TEST_NET='https://esc-testnet.elastos.io'
