--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@web3-react/walletconnect-connector": "^6.2.8",
     "@web3-react/walletlink-connector": "^6.2.8",
     "apexcharts": "^3.32.1",
+    "eth-revert-reason": "^1.0.3",
     "ethers": "^5.5.3",
     "ipfs-http-client": "55.0.0",
     "jwt-decode": "^3.1.2",
