--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ REACT_APP_SERVICE_URL="https://assist-test.meteast.io"
 REACT_APP_BACKEND_URL="https://backend-test.meteast.io"
 # REACT_APP_BACKEND_URL="https://29e8-80-237-47-16.ngrok.io"
 REACT_APP_IPFS_NODE_URL='https://ipfs-test.meteast.io/ipfs'
+REACT_APP_IPFS_UPLOAD_URL='https://ipfs-test.meteast.io/'
 
 REACT_APP_METEAST_CONTRACT="0x7c0c3c566beCBB454Ce867a67C0faAfBe1D24590"
 REACT_APP_METEAST_STICKER_CONTRACT="0x350D156C0D4b8E8437eaA81226d8c0638C5bCf94"
