--- a/package.json
+++ b/package.json
@@ -62,9 +62,10 @@
     "yarn": "^1.22.17"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "git-info": "node src/utils/gitInfo.js",
+    "start": "npm run git-info && react-scripts start",
+    "build": "npm run git-info && react-scripts build",
+    "test": "npm run git-info && react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
