--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 REACT_APP_PUBLIC_ENV="development"
 
+REACT_APP_SHORTERN_SERVICE_URL="https://s.meteast.io"
 REACT_APP_SERVICE_URL="https://assist-test.meteast.io"
 REACT_APP_BACKEND_URL="https://backend-test.meteast.io"
 REACT_APP_IPFS_NODE_URL='https://ipfs-test.meteast.io/ipfs'
