--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "react-share": "4.4.0",
     "recoil": "^0.5.2",
     "styled-components": "^5.3.3",
-    "swiper": "6.8.3",
+    "swiper": "^8.0.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "web3": "^1.6.1",
