--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-scripts": "4.0.3",
     "react-share": "4.4.0",
     "recoil": "^0.5.2",
+    "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.3",
     "swiper": "^8.0.0",
     "typescript": "^4.1.2",
