--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "apexcharts": "^3.32.1",
     "eth-revert-reason": "^1.0.3",
     "ethers": "^5.5.3",
+    "interweave": "^13.0.0",
     "ipfs-http-client": "55.0.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
