feat: add tokenomics link to page footer

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
         "baseUrl": "./",
         "downlevelIteration": true
     },
-    "include": ["src"]
+    "include": ["src", "public/tokenomics"]
 }
