fix: update fetch operation

--- a/.env
+++ b/.env
@@ -5,6 +5,8 @@ REACT_APP_SERVICE_URL="https://drill-assist.meteast.io"
 # "https://assist-test.meteast.io"
 REACT_APP_BACKEND_URL="https://drill-backend.meteast.io"
 # "https://backend-test.meteast.io"
+REACT_APP_WEBSOCKET_URL="wss://drill-assist.meteast.io/socket"
+# "wss://assist-test.meteast.io/socket"
 REACT_APP_IPFS_NODE_URL='https://ipfs-test.meteast.io/ipfs'
 REACT_APP_IPFS_UPLOAD_URL='https://ipfs-test.meteast.io/'
 
