--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-hook-animate-number": "^1.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.14.4",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
