--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@web3-react/walletconnect-connector": "^6.2.8",
     "@web3-react/walletlink-connector": "^6.2.8",
     "apexcharts": "^3.32.1",
+    "date-fns": "^2.28.0",
     "eth-revert-reason": "^1.0.3",
     "ethers": "^5.5.3",
     "interweave": "^13.0.0",
@@ -90,8 +91,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "animated-number-react": "^0.1.2"
   }
 }
