--- a/.env
+++ b/.env
@@ -2,11 +2,11 @@ REACT_APP_PUBLIC_ENV="development"
 
 REACT_APP_SHORTERN_SERVICE_URL="https://s.meteast.io"
 # REACT_APP_SERVICE_URL="https://drill-assist.meteast.io"
-REACT_APP_SERVICE_URL="https://assist-test.meteast.io"
+REACT_APP_SERVICE_URL="https://assist-testnet.meteast.io"
 # REACT_APP_BACKEND_URL="https://drill-backend.meteast.io"
-REACT_APP_BACKEND_URL="https://backend-test.meteast.io"
+REACT_APP_BACKEND_URL="https://backend-testnet.meteast.io"
 # REACT_APP_WEBSOCKET_URL="wss://drill-assist.meteast.io/socket"
-REACT_APP_WEBSOCKET_URL="wss://assist-test.meteast.io/socket"
+REACT_APP_WEBSOCKET_URL="wss://assist-testnet.meteast.io/socket"
 REACT_APP_IPFS_NODE_URL='https://ipfs-test.meteast.io/ipfs'
 REACT_APP_IPFS_UPLOAD_URL='https://ipfs-test.meteast.io/'
 
