--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ REACT_APP_SERVICE_URL="https://assist-testnet.meteast.io"
 # REACT_APP_BACKEND_URL="https://drill-backend.meteast.io"
 REACT_APP_BACKEND_URL="https://backend-testnet.meteast.io"
 # REACT_APP_WEBSOCKET_URL="wss://drill-assist.meteast.io/socket"
-REACT_APP_WEBSOCKET_URL="wss://assist-testnet.meteast.io/socket"
+REACT_APP_WEBSOCKET_URL="wss://assist.meteast.io/socket"
 REACT_APP_IPFS_NODE_URL='https://ipfs-test.meteast.io/ipfs'
 REACT_APP_IPFS_UPLOAD_URL='https://ipfs-test.meteast.io/'
 
