--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_PUBLIC_ENV="production"
+REACT_APP_PUBLIC_ENV="development"
 
 REACT_APP_SHORTERN_SERVICE_URL="https://s.meteast.io"
 # REACT_APP_SERVICE_URL="https://drill-assist.meteast.io"
