--- a/.env
+++ b/.env
@@ -1,16 +1,70 @@
+# Environment
 REACT_APP_PUBLIC_ENV="development"
 
-REACT_APP_SHORTERN_SERVICE_URL="https://s.meteast.io"
-# REACT_APP_SERVICE_URL="https://drill-assist.meteast.io"
-REACT_APP_SERVICE_URL="https://assist-testnet.meteast.io"
-# REACT_APP_BACKEND_URL="https://drill-backend.meteast.io"
-REACT_APP_BACKEND_URL="https://backend-testnet.meteast.io"
-# REACT_APP_WEBSOCKET_URL="wss://drill-assist.meteast.io/socket"
-# REACT_APP_WEBSOCKET_URL="wss://assist-testnet.meteast.io/socket"
-REACT_APP_IPFS_NODE_URL='https://ipfs-test.meteast.io/ipfs'
-REACT_APP_IPFS_UPLOAD_URL='https://ipfs-test.meteast.io/'
 
-REACT_APP_ELASTOS_TRANSACTION_API_URL='https://esc.elastos.io/api?module=transaction&action=gettxinfo&txhash='
-REACT_APP_ELASTOS_LATEST_PRICE_API_URL='https://esc.elastos.io/api?module=stats&action=coinprice'
+# Backend
+REACT_APP_SERVICE_URL_MAIN_NET="https://assist.meteast.io"
+REACT_APP_BACKEND_URL_MAIN_NET="https://backend.meteast.io"
+# REACT_APP_WEBSOCKET_URL="wss://assist.meteast.io/socket"
+
+REACT_APP_SERVICE_URL_TEST_NET="https://assist-testnet.meteast.io"
+REACT_APP_BACKEND_URL_TEST_NET="https://backend-testnet.meteast.io"
+# REACT_APP_WEBSOCKET_URL_TEST="wss://assist-testnet.meteast.io/socket"
+
+
+# IPFS 
+REACT_APP_IPFS_NODE_URL_MAIN_NET='https://ipfs.meteast.io/ipfs'
+REACT_APP_IPFS_UPLOAD_URL_MAIN_NET='https://ipfs.meteast.io/'
+
+REACT_APP_IPFS_NODE_URL_TEST_NET='https://ipfs-test.meteast.io/ipfs'
+REACT_APP_IPFS_UPLOAD_URL_TEST_NET='https://ipfs-test.meteast.io/'
+
+
+# Polr
+REACT_APP_POLR_SERVER_URL="https://s.meteast.io"
+REACT_APP_POLR_API_KEY="2b495b2175ec5470d35482f524ac87"
+
+
+# FireBase
+REACT_APP_FIREBASE_API_KEY='AIzaSyBszrxifqjDYXWpIegXH6lq3NGKZFpIlxs'
+REACT_APP_FIREBASE_AUTH_DOMAIN='meteast-aaf28.firebaseapp.com'
+REACT_APP_FIREBASE_DATABASE_URL = ''
+REACT_APP_FIREBASE_PROJECT_ID = 'meteast-aaf28'
+REACT_APP_FIREBASE_STORAGE_BUCKET = 'meteast-aaf28.appspot.com'
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID = '204026476901'
+REACT_APP_FIREBASE_APPID = '1:204026476901:web:fdcb6574f944a87c1e898c'
+REACT_APP_FIREBASE_MEASUREMENT_ID = 'G-YHD2MFHHE5'
+
+
+# Coin Price
+REACT_APP_TRINITY_FEEDS_PRICE_API_URL='https://assist.trinity-feeds.app/feeds/api/v1/price'
+REACT_APP_GLIDE_FINANCE_PRICE_API_URL='https://api.glidefinance.io/subgraphs/name/glide/exchange'
+# REACT_APP_ELASTOS_TRANSACTION_API_URL='https://esc.elastos.io/api?module=transaction&action=gettxinfo&txhash='
+# REACT_APP_ELASTOS_LATEST_PRICE_API_URL='https://esc.elastos.io/api?module=stats&action=coinprice'
+
+
+# RPC Url
+REACT_APP_ESC_RPC_URL_MAIN_NET='https://api.elastos.io/esc'
+REACT_APP_ESC_BLOCK_URL_MAIN_NET='https://api.elastos.io/'
+
+REACT_APP_ESC_RPC_URL_TEST_NET='https://api-testnet.elastos.io/eth'
+REACT_APP_ESC_BLOCK_URL_TEST_NET='https://eth-testnet.elastos.io'
+
+
+# ESC Explore
 REACT_APP_ELASTOS_ESC_MAIN_NET='https://esc.elastos.io'
 REACT_APP_ELASTOS_ESC_TEST_NET='https://esc-testnet.elastos.io'
+
+
+# Contact
+REACT_APP_METEAST_TELEGRAM='https://t.me/MetEastofficial'
+REACT_APP_METEAST_DISCORD='https://discord.gg/s7DNxA8jd8'
+REACT_APP_METEAST_TWITTER='https://twitter.com/MetEastNFT'
+REACT_APP_METEAST_INSTAGRAM='https://www.instagram.com/meteast2022/'
+REACT_APP_METEAST_MEDIUM='https://medium.com/@Meteast2022'
+REACT_APP_METEAST_GITHUB='https://github.com/meteast'
+
+
+# EE Download
+REACT_APP_EE_DOWNLOAD_GOOGLE_PLAY='https://play.google.com/store/apps/details?id=org.elastos.essentials.app&hl=en_US&gl=US'
+REACT_APP_EE_DOWNLOAD_APP_STORE='https://apps.apple.com/us/app/elastos-essentials/id1568931743'
