fix: update config and env file

--- a/.env
+++ b/.env
@@ -22,16 +22,18 @@ REACT_APP_IPFS_UPLOAD_URL_TEST_NET='https://ipfs-test.meteast.io/'
 
 # Polr
 REACT_APP_POLR_SERVER_URL="https://s.meteast.io"
+REACT_APP_POLR_API_KEY=""
+
 
 # FireBase
-REACT_APP_FIREBASE_API_KEY='AIzaSyBszrxifqjDYXWpIegXH6lq3NGKZFpIlxs'
-REACT_APP_FIREBASE_AUTH_DOMAIN='meteast-aaf28.firebaseapp.com'
+REACT_APP_FIREBASE_API_KEY=''
+REACT_APP_FIREBASE_AUTH_DOMAIN=''
 REACT_APP_FIREBASE_DATABASE_URL = ''
-REACT_APP_FIREBASE_PROJECT_ID = 'meteast-aaf28'
-REACT_APP_FIREBASE_STORAGE_BUCKET = 'meteast-aaf28.appspot.com'
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID = '204026476901'
-REACT_APP_FIREBASE_APPID = '1:204026476901:web:fdcb6574f944a87c1e898c'
-REACT_APP_FIREBASE_MEASUREMENT_ID = 'G-YHD2MFHHE5'
+REACT_APP_FIREBASE_PROJECT_ID = ''
+REACT_APP_FIREBASE_STORAGE_BUCKET = ''
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID = ''
+REACT_APP_FIREBASE_APPID = ''
+REACT_APP_FIREBASE_MEASUREMENT_ID = ''
 
 
 # Coin Price
