--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
 # Environment
-REACT_APP_PUBLIC_ENV="development"
+REACT_APP_PUBLIC_ENV='development'
 
 
 # Backend
-REACT_APP_SERVICE_URL_MAIN_NET="https://assist.meteast.io"
-REACT_APP_BACKEND_URL_MAIN_NET="https://backend.meteast.io"
-# REACT_APP_WEBSOCKET_URL="wss://assist.meteast.io/socket"
+REACT_APP_SERVICE_URL_MAIN_NET='https://assist.meteast.io'
+REACT_APP_BACKEND_URL_MAIN_NET='https://backend.meteast.io'
+# REACT_APP_WEBSOCKET_URL='wss://assist.meteast.io/socket'
 
-REACT_APP_SERVICE_URL_TEST_NET="https://assist-testnet.meteast.io"
-REACT_APP_BACKEND_URL_TEST_NET="https://backend-testnet.meteast.io"
-# REACT_APP_WEBSOCKET_URL_TEST="wss://assist-testnet.meteast.io/socket"
+REACT_APP_SERVICE_URL_TEST_NET='https://assist-testnet.meteast.io'
+REACT_APP_BACKEND_URL_TEST_NET='https://backend-testnet.meteast.io'
+# REACT_APP_WEBSOCKET_URL_TEST='wss://assist-testnet.meteast.io/socket'
 
 
 # IPFS 
@@ -21,8 +21,17 @@ REACT_APP_IPFS_UPLOAD_URL_TEST_NET='https://ipfs-test.meteast.io/'
 
 
 # Polr
-REACT_APP_POLR_SERVER_URL="https://s.meteast.io"
-REACT_APP_POLR_API_KEY=""
+REACT_APP_POLR_SERVER_URL='https://s.meteast.io'
+REACT_APP_POLR_API_KEY=''
+
+
+# Contract
+REACT_APP_METEAST_CONTRACT_ADDRESS=''
+REACT_APP_METEAST_MARKET_CONTRACT_ADDRESS=''
+REACT_APP_ME_TOKEN_BASE_CONTRACT_ADDRESS = ''
+REACT_APP_ME_TOKEN_VESTING_CONTRACT_ADDRESS = ''
+REACT_APP_ME_TOKEN_STAKING_CONTRACT_ADDRESS = ''
+REACT_APP_ME_TOKEN_MINING_REWARD_CONTRACT_ADDRESS = ''
 
 
 # FireBase
