trigger auto deployment

--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ REACT_APP_BACKEND_URL_TEST_NET='https://backend-testnet.meteast.io'
 # REACT_APP_WEBSOCKET_URL_TEST='wss://assist-testnet.meteast.io/socket'
 
 
-# IPFS 
+# IPFS
 REACT_APP_IPFS_NODE_URL_MAIN_NET='https://ipfs.meteast.io/ipfs'
 REACT_APP_IPFS_UPLOAD_URL_MAIN_NET='https://ipfs.meteast.io/'
 
@@ -22,27 +22,27 @@ REACT_APP_IPFS_UPLOAD_URL_TEST_NET='https://ipfs-test.meteast.io/'
 
 # Polr
 REACT_APP_POLR_SERVER_URL='https://s.meteast.io'
-REACT_APP_POLR_API_KEY=''
+REACT_APP_POLR_API_KEY='2b495b2175ec5470d35482f524ac87'
 
 
 # Contract
-REACT_APP_METEAST_CONTRACT_ADDRESS=''
-REACT_APP_METEAST_MARKET_CONTRACT_ADDRESS=''
-REACT_APP_ME_TOKEN_BASE_CONTRACT_ADDRESS = ''
-REACT_APP_ME_TOKEN_VESTING_CONTRACT_ADDRESS = ''
-REACT_APP_ME_TOKEN_STAKING_CONTRACT_ADDRESS = ''
-REACT_APP_ME_TOKEN_MINING_REWARD_CONTRACT_ADDRESS = ''
+REACT_APP_METEAST_CONTRACT_ADDRESS='0x3BeB5705Cae51eCEbecaAE7630F881cfDEfB1BF2'
+REACT_APP_METEAST_MARKET_CONTRACT_ADDRESS='0x6CA7f41b2fE4edF769f33F94822eec0234578205'
+REACT_APP_ME_TOKEN_BASE_CONTRACT_ADDRESS = '0x8135A6f20120e50799b7bBF5688a5856A961d90C'
+REACT_APP_ME_TOKEN_VESTING_CONTRACT_ADDRESS = '0xF7b64C6b31AAc273aE2aeA4170C639f0d8DFA28D'
+REACT_APP_ME_TOKEN_STAKING_CONTRACT_ADDRESS = '0x4bf4d48630AC3d1A46cD269F4204f6CE991AeB05'
+REACT_APP_ME_TOKEN_MINING_REWARD_CONTRACT_ADDRESS = '0xb2EEe61F17A88D5e9bd2184D91cdd84E2278d269'
 
 
 # FireBase
-REACT_APP_FIREBASE_API_KEY=''
-REACT_APP_FIREBASE_AUTH_DOMAIN=''
-REACT_APP_FIREBASE_DATABASE_URL = ''
-REACT_APP_FIREBASE_PROJECT_ID = ''
-REACT_APP_FIREBASE_STORAGE_BUCKET = ''
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID = ''
-REACT_APP_FIREBASE_APPID = ''
-REACT_APP_FIREBASE_MEASUREMENT_ID = ''
+REACT_APP_FIREBASE_API_KEY=
+REACT_APP_FIREBASE_AUTH_DOMAIN=
+REACT_APP_FIREBASE_DATABASE_URL =
+REACT_APP_FIREBASE_PROJECT_ID =
+REACT_APP_FIREBASE_STORAGE_BUCKET =
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID =
+REACT_APP_FIREBASE_APPID =
+REACT_APP_FIREBASE_MEASUREMENT_ID =
 
 
 # Coin Price
