--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ REACT_APP_PUBLIC_ENV='development'
 
 
 # Backend
-REACT_APP_SERVICE_URL_MAIN_NET='https://assist.meteast.io'
-REACT_APP_BACKEND_URL_MAIN_NET='https://backend.meteast.io'
+REACT_APP_SERVICE_URL_MAIN_NET='https://assist-pro.meteast.io'
+REACT_APP_BACKEND_URL_MAIN_NET='https://backend-pro.meteast.io'
 # REACT_APP_WEBSOCKET_URL='wss://assist.meteast.io/socket'
 
 REACT_APP_SERVICE_URL_TEST_NET='https://assist-testnet.meteast.io'
@@ -26,23 +26,30 @@ REACT_APP_POLR_API_KEY=''
 
 
 # Contract
-REACT_APP_METEAST_CONTRACT_ADDRESS=''
-REACT_APP_METEAST_MARKET_CONTRACT_ADDRESS=''
-REACT_APP_ME_TOKEN_BASE_CONTRACT_ADDRESS = ''
-REACT_APP_ME_TOKEN_VESTING_CONTRACT_ADDRESS = ''
-REACT_APP_ME_TOKEN_STAKING_CONTRACT_ADDRESS = ''
-REACT_APP_ME_TOKEN_MINING_REWARD_CONTRACT_ADDRESS = ''
+REACT_APP_METEAST_CONTRACT_ADDRESS_MAIN_NET=''
+REACT_APP_METEAST_MARKET_CONTRACT_ADDRESS_MAIN_NET=''
+REACT_APP_ME_TOKEN_BASE_CONTRACT_ADDRESS_MAIN_NET=''
+REACT_APP_ME_TOKEN_VESTING_CONTRACT_ADDRESS_MAIN_NET=''
+REACT_APP_ME_TOKEN_STAKING_CONTRACT_ADDRESS_MAIN_NET=''
+REACT_APP_ME_TOKEN_MINING_REWARD_CONTRACT_ADDRESS_MAIN_NET=''
+
+REACT_APP_METEAST_CONTRACT_ADDRESS_TEST_NET=''
+REACT_APP_METEAST_MARKET_CONTRACT_ADDRESS_TEST_NET=''
+REACT_APP_ME_TOKEN_BASE_CONTRACT_ADDRESS_TEST_NET=''
+REACT_APP_ME_TOKEN_VESTING_CONTRACT_ADDRESS_TEST_NET=''
+REACT_APP_ME_TOKEN_STAKING_CONTRACT_ADDRESS_TEST_NET=''
+REACT_APP_ME_TOKEN_MINING_REWARD_CONTRACT_ADDRESS_TEST_NET=''
 
 
 # FireBase
 REACT_APP_FIREBASE_API_KEY=''
 REACT_APP_FIREBASE_AUTH_DOMAIN=''
-REACT_APP_FIREBASE_DATABASE_URL = ''
-REACT_APP_FIREBASE_PROJECT_ID = ''
-REACT_APP_FIREBASE_STORAGE_BUCKET = ''
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID = ''
-REACT_APP_FIREBASE_APPID = ''
-REACT_APP_FIREBASE_MEASUREMENT_ID = ''
+REACT_APP_FIREBASE_DATABASE_URL=''
+REACT_APP_FIREBASE_PROJECT_ID=''
+REACT_APP_FIREBASE_STORAGE_BUCKET=''
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=''
+REACT_APP_FIREBASE_APPID=''
+REACT_APP_FIREBASE_MEASUREMENT_ID=''
 
 
 # Coin Price
