fix: rebase conflicts

--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ REACT_APP_BACKEND_URL_TEST_NET='https://backend-testnet.meteast.io'
 # REACT_APP_WEBSOCKET_URL_TEST='wss://assist-testnet.meteast.io/socket'
 
 
-# IPFS 
+# IPFS
 REACT_APP_IPFS_NODE_URL_MAIN_NET='https://ipfs.meteast.io/ipfs'
 REACT_APP_IPFS_UPLOAD_URL_MAIN_NET='https://ipfs.meteast.io/'
 
@@ -22,7 +22,7 @@ REACT_APP_IPFS_UPLOAD_URL_TEST_NET='https://ipfs-test.meteast.io/'
 
 # Polr
 REACT_APP_POLR_SERVER_URL='https://s.meteast.io'
-REACT_APP_POLR_API_KEY=''
+REACT_APP_POLR_API_KEY='2b495b2175ec5470d35482f524ac87'
 
 
 # Contract
