--- a/.env
+++ b/.env
@@ -1,45 +1,26 @@
 # Environment
 REACT_APP_PUBLIC_ENV='development'
 
-
 # Backend
-REACT_APP_SERVICE_URL_MAIN_NET='https://assist-pro.meteast.io'
-REACT_APP_BACKEND_URL_MAIN_NET='https://backend-pro.meteast.io'
-# REACT_APP_WEBSOCKET_URL='wss://assist.meteast.io/socket'
+REACT_APP_SERVICE_URL='https://assist-testnet.meteast.io'
+REACT_APP_BACKEND_URL='https://backend-testnet.meteast.io'
+# REACT_APP_WEBSOCKET_URL='wss://assist-testnet.meteast.io/socket'
 
-REACT_APP_SERVICE_URL_TEST_NET='https://assist-testnet.meteast.io'
-REACT_APP_BACKEND_URL_TEST_NET='https://backend-testnet.meteast.io'
-# REACT_APP_WEBSOCKET_URL_TEST='wss://assist-testnet.meteast.io/socket'
-
-
-# IPFS
-REACT_APP_IPFS_NODE_URL_MAIN_NET='https://ipfs.meteast.io/ipfs'
-REACT_APP_IPFS_UPLOAD_URL_MAIN_NET='https://ipfs.meteast.io/'
-
-REACT_APP_IPFS_NODE_URL_TEST_NET='https://ipfs-test.meteast.io/ipfs'
-REACT_APP_IPFS_UPLOAD_URL_TEST_NET='https://ipfs-test.meteast.io/'
-
+# IPFS 
+REACT_APP_IPFS_NODE_URL='https://ipfs-test.meteast.io/ipfs'
+REACT_APP_IPFS_UPLOAD_URL='https://ipfs-test.meteast.io/'
 
 # Polr
 REACT_APP_POLR_SERVER_URL='https://s.meteast.io'
-REACT_APP_POLR_API_KEY='2b495b2175ec5470d35482f524ac87'
-
+REACT_APP_POLR_API_KEY=''
 
 # Contract
-REACT_APP_METEAST_CONTRACT_ADDRESS_MAIN_NET=''
-REACT_APP_METEAST_MARKET_CONTRACT_ADDRESS_MAIN_NET=''
-REACT_APP_ME_TOKEN_BASE_CONTRACT_ADDRESS_MAIN_NET=''
-REACT_APP_ME_TOKEN_VESTING_CONTRACT_ADDRESS_MAIN_NET=''
-REACT_APP_ME_TOKEN_STAKING_CONTRACT_ADDRESS_MAIN_NET=''
-REACT_APP_ME_TOKEN_MINING_REWARD_CONTRACT_ADDRESS_MAIN_NET=''
-
-REACT_APP_METEAST_CONTRACT_ADDRESS_TEST_NET=''
-REACT_APP_METEAST_MARKET_CONTRACT_ADDRESS_TEST_NET=''
-REACT_APP_ME_TOKEN_BASE_CONTRACT_ADDRESS_TEST_NET=''
-REACT_APP_ME_TOKEN_VESTING_CONTRACT_ADDRESS_TEST_NET=''
-REACT_APP_ME_TOKEN_STAKING_CONTRACT_ADDRESS_TEST_NET=''
-REACT_APP_ME_TOKEN_MINING_REWARD_CONTRACT_ADDRESS_TEST_NET=''
-
+REACT_APP_METEAST_CONTRACT_ADDRESS=''
+REACT_APP_METEAST_MARKET_CONTRACT_ADDRESS=''
+REACT_APP_ME_TOKEN_BASE_CONTRACT_ADDRESS=''
+REACT_APP_ME_TOKEN_VESTING_CONTRACT_ADDRESS=''
+REACT_APP_ME_TOKEN_STAKING_CONTRACT_ADDRESS=''
+REACT_APP_ME_TOKEN_MINING_REWARD_CONTRACT_ADDRESS=''
 
 # FireBase
 REACT_APP_FIREBASE_API_KEY=''
@@ -51,35 +32,28 @@ REACT_APP_FIREBASE_MESSAGING_SENDER_ID=''
 REACT_APP_FIREBASE_APPID=''
 REACT_APP_FIREBASE_MEASUREMENT_ID=''
 
-
 # Coin Price
 REACT_APP_TRINITY_FEEDS_PRICE_API_URL='https://assist.trinity-feeds.app/feeds/api/v1/price'
 REACT_APP_GLIDE_FINANCE_PRICE_API_URL='https://api.glidefinance.io/subgraphs/name/glide/exchange'
 # REACT_APP_ELASTOS_TRANSACTION_API_URL='https://esc.elastos.io/api?module=transaction&action=gettxinfo&txhash='
 # REACT_APP_ELASTOS_LATEST_PRICE_API_URL='https://esc.elastos.io/api?module=stats&action=coinprice'
 
-
 # RPC Url
-REACT_APP_ESC_RPC_URL_MAIN_NET='https://api.elastos.io/esc'
-REACT_APP_ESC_BLOCK_URL_MAIN_NET='https://api.elastos.io/'
-
-REACT_APP_ESC_RPC_URL_TEST_NET='https://api-testnet.elastos.io/eth'
-REACT_APP_ESC_BLOCK_URL_TEST_NET='https://eth-testnet.elastos.io'
-
+REACT_APP_ESC_CHAIN_NAME='Elastos Smart Chain TestNet'
+REACT_APP_ESC_CHAIN_ID='0x15'
+REACT_APP_ESC_RPC_URL='https://api-testnet.elastos.io/eth'
+REACT_APP_ESC_BLOCK_URL='https://eth-testnet.elastos.io'
 
 # ESC Explore
-REACT_APP_ELASTOS_ESC_MAIN_NET='https://esc.elastos.io'
-REACT_APP_ELASTOS_ESC_TEST_NET='https://esc-testnet.elastos.io'
-
+REACT_APP_ELASTOS_ESC='https://esc-testnet.elastos.io'
 
 # Contact
-REACT_APP_METEAST_TELEGRAM='https://t.me/MetEastofficial'
-REACT_APP_METEAST_DISCORD='https://discord.gg/s7DNxA8jd8'
-REACT_APP_METEAST_TWITTER='https://twitter.com/MetEastNFT'
-REACT_APP_METEAST_INSTAGRAM='https://www.instagram.com/meteast2022/'
-REACT_APP_METEAST_MEDIUM='https://medium.com/@Meteast2022'
-REACT_APP_METEAST_GITHUB='https://github.com/meteast'
-
+REACT_APP_METEAST_TELEGRAM=''
+REACT_APP_METEAST_DISCORD=''
+REACT_APP_METEAST_TWITTER=''
+REACT_APP_METEAST_INSTAGRAM=''
+REACT_APP_METEAST_MEDIUM=''
+REACT_APP_METEAST_GITHUB=''
 
 # EE Download
 REACT_APP_EE_DOWNLOAD_GOOGLE_PLAY='https://play.google.com/store/apps/details?id=org.elastos.essentials.app&hl=en_US&gl=US'
