--- a/.env
+++ b/.env
@@ -15,12 +15,12 @@ REACT_APP_POLR_SERVER_URL='https://s.meteast.io'
 REACT_APP_POLR_API_KEY=''
 
 # Contract
-REACT_APP_METEAST_CONTRACT_ADDRESS=''
-REACT_APP_METEAST_MARKET_CONTRACT_ADDRESS=''
-REACT_APP_ME_TOKEN_BASE_CONTRACT_ADDRESS=''
-REACT_APP_ME_TOKEN_VESTING_CONTRACT_ADDRESS=''
-REACT_APP_ME_TOKEN_STAKING_CONTRACT_ADDRESS=''
-REACT_APP_ME_TOKEN_MINING_REWARD_CONTRACT_ADDRESS=''
+REACT_APP_METEAST_CONTRACT_ADDRESS='0xd50BEDAD0985041fDf1270AE44034005456e5233'
+REACT_APP_METEAST_MARKET_CONTRACT_ADDRESS='0x525805f96CEf178AD8d4Ca37E4a2c29262f7ae93'
+REACT_APP_ME_TOKEN_BASE_CONTRACT_ADDRESS='0x3A84a2B672d2c98095E788Ecb453CC0e50F4AfF5'
+REACT_APP_ME_TOKEN_VESTING_CONTRACT_ADDRESS='0x9A8Ec6Ddcd05A787e1eB36B9FF64E374Ee2820B5'
+REACT_APP_ME_TOKEN_STAKING_CONTRACT_ADDRESS='0xdE8fD9Af0ad8B7c5A4bA3C84865228fF76810834'
+REACT_APP_ME_TOKEN_MINING_REWARD_CONTRACT_ADDRESS='0xBb0B69D3009Cf1B280D85cd73DD8Eef241D97e6E'
 
 # FireBase
 REACT_APP_FIREBASE_API_KEY=''
@@ -48,12 +48,12 @@ REACT_APP_ESC_BLOCK_URL='https://eth-testnet.elastos.io'
 REACT_APP_ELASTOS_ESC='https://esc-testnet.elastos.io'
 
 # Contact
-REACT_APP_METEAST_TELEGRAM=''
-REACT_APP_METEAST_DISCORD=''
-REACT_APP_METEAST_TWITTER=''
-REACT_APP_METEAST_INSTAGRAM=''
-REACT_APP_METEAST_MEDIUM=''
-REACT_APP_METEAST_GITHUB=''
+REACT_APP_METEAST_TELEGRAM='https://t.me/MetEastofficial'
+REACT_APP_METEAST_DISCORD='https://discord.gg/s7DNxA8jd8'
+REACT_APP_METEAST_TWITTER='https://twitter.com/MetEastNFT'
+REACT_APP_METEAST_INSTAGRAM='https://www.instagram.com/meteast2022/'
+REACT_APP_METEAST_MEDIUM='https://medium.com/@Meteast2022'
+REACT_APP_METEAST_GITHUB='https://github.com/meteast'
 
 # EE Download
 REACT_APP_EE_DOWNLOAD_GOOGLE_PLAY='https://play.google.com/store/apps/details?id=org.elastos.essentials.app&hl=en_US&gl=US'
